; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/avl/extr_avl.c_avl_insert_lock.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/avl/extr_avl.c_avl_insert_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @avl_insert_lock(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = call i32 @avl_write_lock(%struct.TYPE_5__* %6)
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32*, i32** %4, align 8
  %11 = call i32* @avl_insert(i32* %9, i32* %10)
  store i32* %11, i32** %5, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = call i32 @avl_unlock(%struct.TYPE_5__* %12)
  %14 = load i32*, i32** %5, align 8
  ret i32* %14
}

declare dso_local i32 @avl_write_lock(%struct.TYPE_5__*) #1

declare dso_local i32* @avl_insert(i32*, i32*) #1

declare dso_local i32 @avl_unlock(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
